[tool.poetry]
name = "gen-cutter-sanborn"
version = "0.1.0"
description = "This is an Open Sourcer project that generate a Cutter-Sanborn code."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
packages = [{ include = "gen_cutter_sanborn" }]

[tool.poetry.dependencies]
python = "^3.11"
unidecode = "^1.3.6"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.87.0"
gunicorn = "^20.1.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
httpx = "^0.23.1"
flake8 = "^6.0.0"
codecov = "^2.1.12"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]

minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
